# Agentic-AI-Task

02-LLM(OpenAI-Router)/: main.py
03_litellm_openai_agent/01_litellm/myproject/myproject/: pyproject.toml
03_litellm_openai_agent/01_litellm/myproject/myproject/src/myproject/: hello.py
03_litellm_openai_agent/03_Litellm_agent_sdk/: 03_Litellm_agent_sdk.ipynb
04-Hello_Agent/async_hello_agent/hello_agent/: main.py
test-uv/: pyproject.toml
test-uv/src/: hello.py
test-uv/src/test_uv/: __init__.py
