[project]
name = "test-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Portfolio", email = "your-email@example.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
test-uv = "test_uv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
